--- a/backend/package.json
+++ b/backend/package.json
@@ -1,38 +1,29 @@
 {
-  "name": "ecommerce-backend",
+  "name": "backend",
   "version": "1.0.0",
-  "description": "Backend API for Ecommerce Web Application",
+  "description": "Backend for E-commerce app",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon server.js"
   },
-  "keywords": [
-    "ecommerce",
-    "api",
-    "nodejs",
-    "express",
-    "postgresql"
-  ],
-  "author": "Anandhu",
-  "license": "MIT",
   "dependencies": {
-    "express": "^4.18.2",
+    "bcryptjs": "^3.0.3",
     "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
-    "pg": "^8.11.3",
-    "bcryptjs": "^2.4.3",
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "gsap": "^3.13.0",
     "jsonwebtoken": "^9.0.2",
-    "razorpay": "^2.9.2",
-    "multer": "^1.4.5-lts.1",
-    "helmet": "^7.0.0",
-    "express-rate-limit": "^6.10.0"
+    "nodemailer": "^7.0.11",
+    "pg": "^8.10.0",
+    "pg-hstore": "^2.3.4",
+    "razorpay": "^2.9.6",
+    "sequelize": "^6.31.0",
+    "stripe": "^20.0.0"
   },
   "devDependencies": {
-    "nodemon": "^3.0.1"
+    "nodemon": "^3.1.11"
   },
-  "engines": {
-    "node": ">=16.0.0"
-  }
+  "author": "",
+  "license": "ISC"
 }
